White label the DEX

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -324,10 +324,10 @@ TN {
     port = 6861
 
     # Hash of API key string
-    api-key-hash = "Dx4NvzYMc3ZStZ5krkgG2tEcaFcgVLYLYQzKGw3iTRUu"
+    api-key-hash = ""H6nsiifwYKYEx6YzYD7woP1XCn72RVvx6tC1zjjLXqsu
 
     # Enable/disable CORS support
-    cors = yes
+    cors = no
 
     # Enable/disable X-API-Key from different host
     api-key-different-host = no
