--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,7 +2,7 @@
 # HOCON specification: https://github.com/lightbend/config/blob/master/HOCON.md
 TN {
   # Node base directory
-  directory = ${user.home}"/TN"
+  directory = ${user.home}"/pongo"
   data-directory = ${TN.directory}"/data"
   max-cache-size = 100000
 
@@ -11,7 +11,7 @@ TN {
     min-blocks-in-memory: 100
     type: CUSTOM
     custom {
-      address-scheme-character: "L"
+      address-scheme-character: "U"
       # various parameters of network consensus
       functionality {
         feature-check-blocks-period = 5000
@@ -478,7 +478,7 @@ TN.matcher.snapshot-store {
 }
 
 akka {
-  loglevel = "INFO"
+  loglevel = "DEBUG"
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   log-dead-letters-during-shutdown = false
