Change TN to PONGO

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -95,7 +95,9 @@ TN {
     # nonce = 0
 
     # List of IP addresses of well known nodes.
-    known-peers = ["node.blackturtle.eu","privatenode2.blackturtle.eu"]
+    # known-peers = ["node.pongo.online"]
+
+    known-peers = []
 
     # How long the information about peer stays in database after the last communication with it
     peers-data-residence-time = 1d
@@ -261,10 +263,30 @@ TN {
     max-orders-per-address = 1000
 
     # Base assets used as price assets
-    price-assets: []
+    # price-assets: []
 
     # Predefined ordering of base assets
-    predefined-pairs: []
+    # predefined-pairs: []
+
+    price-assets = [
+      "PONGO",
+      "Fmg13HEHJHuZYbtJq8Da8wifJENq8uBxDuWoP9pVe2Qe",
+      "HyFJ3rrq5m7FxdkWtQXkZrDat1F7LjVVGfpSkUuEXQHj",
+      "2xnE3EdpqXtFgCP156qt1AbyjpqdZ5jGjWo3CwTawcux",
+      "6pmDivReTLikwYqQtJTv6dTcE59knriaodB3AK8T9cF8"
+    ]
+
+    predefined-pairs = [
+      {amountAsset = "PONGO", priceAsset = "Fmg13HEHJHuZYbtJq8Da8wifJENq8uBxDuWoP9pVe2Qe"},
+      {amountAsset = "PONGO", priceAsset = "HyFJ3rrq5m7FxdkWtQXkZrDat1F7LjVVGfpSkUuEXQHj"},
+      {amountAsset = "PONGO", priceAsset = "2xnE3EdpqXtFgCP156qt1AbyjpqdZ5jGjWo3CwTawcux"},
+      {amountAsset = "PONGO", priceAsset = "6pmDivReTLikwYqQtJTv6dTcE59knriaodB3AK8T9cF8"},
+      {amountAsset = "Fmg13HEHJHuZYbtJq8Da8wifJENq8uBxDuWoP9pVe2Qe", priceAsset = "2aSqCbvCTgvCpwkGsk4mea4tCLG4Zgp69aQDhHNvRUZv"},
+      {amountAsset = "Fmg13HEHJHuZYbtJq8Da8wifJENq8uBxDuWoP9pVe2Qe", priceAsset = "8zEZuJcKPQmFuYgVe5ZMpxgiPLu5zBhjA6xgdGomQDaP"},
+      {amountAsset = "Fmg13HEHJHuZYbtJq8Da8wifJENq8uBxDuWoP9pVe2Qe", priceAsset = "D2MNuUyA38pSKoV7F7vpS15Uhw9nw5qfbrGUfCLRNuRo"},
+      {amountAsset = "2xnE3EdpqXtFgCP156qt1AbyjpqdZ5jGjWo3CwTawcux", priceAsset = "HyFJ3rrq5m7FxdkWtQXkZrDat1F7LjVVGfpSkUuEXQHj"}
+    ]
+
 
     # Maximum difference with Matcher server time
     max-timestamp-diff = 30d
@@ -324,7 +346,7 @@ TN {
     port = 6861
 
     # Hash of API key string
-    api-key-hash = ""H6nsiifwYKYEx6YzYD7woP1XCn72RVvx6tC1zjjLXqsu
+    api-key-hash = "testing"
 
     # Enable/disable CORS support
     cors = no
@@ -478,7 +500,7 @@ TN.matcher.snapshot-store {
 }
 
 akka {
-  loglevel = "INFO"
+  loglevel = "DEBUG"
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   log-dead-letters-during-shutdown = false
