changed the network byte

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,7 +11,7 @@ TN {
     min-blocks-in-memory: 100
     type: CUSTOM
     custom {
-      address-scheme-character: "U"
+      address-scheme-character: "L"
       # various parameters of network consensus
       functionality {
         feature-check-blocks-period = 5000
@@ -480,6 +480,7 @@ metrics {
   influx-db {
     uri = "http://"${kamon.influxdb.hostname}":"${kamon.influxdb.port}
     db = ${kamon.influxdb.database}
+
 
     # username = ${kamon.influxdb.authentication.user}
     # password = ${kamon.influxdb.authentication.password}
