--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -156,6 +156,48 @@ TN {
       ignore-rx-messages = [25] # TransactionMessageSpec
     }
   }
+  fees {
+    issue {
+      PONGO = 100000000000
+    }
+    transfer {
+      PONGO = 2000000
+    }
+    mass-transfer {
+      # Fee for MassTransfer transaction is calculated as
+      # [transfer fee] + [mass transfer fee] * [number of transfers in transaction]
+      PONGO  = 1000000
+    }
+    reissue {
+      PONGO = 10000000000
+    }
+    burn {
+      PONGO = 2000000
+    }
+    exchange {
+      PONGO = 4000000
+    }
+    lease {
+      PONGO = 2000000
+    }
+    lease-cancel {
+      PONGO= 2000000
+    }
+    create-alias {
+      PONGO = 1000000000
+    }
+    data {
+      # fee = [data fee] * [size in Kbytes]
+      PONGO = 2000000
+    }
+    set-script {
+      PONGO = 2000000
+    }
+    sponsor-fee {
+      PONGO = 2000000
+    }
+  }
+
 
   # Wallet settings
   wallet {
